--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
+<div class="jumbotron centre">
 <h1>Welcome to my site!</h1>
-<p>Sign up <%= link_to "here", "#" %></p>
+<%= link_to "Log in", "#", class: "btn btn-primary" %>
+<%= link_to "Sign up", "#", class: "btn btn-default" %>
+</div>
