--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,11 @@
 <div class="jumbotron centre">
 <h1>Welcome to my site!</h1>
-<%= link_to "Log in", "#", class: "btn btn-primary" %>
-<%= link_to "Sign up", "#", class: "btn btn-default" %>
+<% if user_signed_in? %>
+	Members only
+	<% else %>
+	<p>
+<%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
+<%= link_to "Sign up", new_user_registration_path, class: "btn btn-default" %>
+	</p>
+<% end %>
 </div>
